--- a/GymExercise.ipynb
+++ b/GymExercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaJBpBPPEvkLu2uoQButbz",
+      "authorship_tag": "ABX9TyP2WlSgVIuWm7/svmH50IZb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,8 @@
         "!pip install matplotlib\n",
         "!pip install seaborn\n",
         "!pip install sklearn\n",
-        "!pip install tensorflow"
+        "!pip install tensorflow\n",
+        "!pip install keras"
       ],
       "metadata": {
         "id": "E6T7zdSBZQWF"
@@ -67,7 +68,7 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.neighbors import\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn import tree\n",
         "from sklearn.compose import ColumnTransformer\n",
@@ -605,12 +606,9 @@
         "param_grid = {\n",
         "    'n_estimators': [100, 150, 200],\n",
         "    'criterion': ['gini', 'entropy'],\n",
-        "    'max_depth': [None, 10, 20, 30],\n",
         "    'min_samples_split': [2, 5, 10],\n",
         "    'min_samples_leaf': [1, 2, 5],\n",
         "    'max_features': [None, 'sqrt', 'log2'],\n",
-        "    'bootstrap': [True, False],\n",
-        "    'oob_score': [True, False]\n",
         "}\n",
         "\n",
         "grid_search = GridSearchCV(estimator=RandomForestClassifier(), param_grid=param_grid, cv=5, scoring='accuracy')\n",
