--- a/GymExercise.ipynb
+++ b/GymExercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1DDhNRindkVrJW6kiubIy",
+      "authorship_tag": "ABX9TyNmWBiQ0v5IcF8wTY4l1hnW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4126,11 +4126,11 @@
         "print('Test score: ',accuracy_score(y_experience_level_test,SVCXpLevel_model.predict(x_experiênce_level_test)))"
       ],
       "metadata": {
-        "id": "Kgq_XhS-vkOf",
-        "outputId": "932222e2-9e16-4bae-e1c1-6d385ad330df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kgq_XhS-vkOf",
+        "outputId": "932222e2-9e16-4bae-e1c1-6d385ad330df"
       },
       "execution_count": 39,
       "outputs": [
@@ -4150,11 +4150,11 @@
         "accuracy_score(y_experience_level_train,SVCXpLevel_model.predict(x_experiênce_level_train)),accuracy_score(y_experience_level_test,SVCXpLevel_model.predict(x_experiênce_level_test))"
       ],
       "metadata": {
-        "id": "VnWqRmPS0n6h",
-        "outputId": "bef8250c-db21-4517-fc13-8811a212a208",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VnWqRmPS0n6h",
+        "outputId": "bef8250c-db21-4517-fc13-8811a212a208"
       },
       "execution_count": 40,
       "outputs": [
@@ -4176,11 +4176,11 @@
         "confusion_matrix(y_experience_level_train,SVCXpLevel_model.predict(x_experiênce_level_train)),confusion_matrix(y_experience_level_test,SVCXpLevel_model.predict(x_experiênce_level_test))"
       ],
       "metadata": {
-        "id": "nRykxlXi0scI",
-        "outputId": "50bfa8f5-d4b4-49a9-9fb1-a6e7cf3468bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nRykxlXi0scI",
+        "outputId": "50bfa8f5-d4b4-49a9-9fb1-a6e7cf3468bc"
       },
       "execution_count": 42,
       "outputs": [
@@ -4207,11 +4207,11 @@
         "print(classification_report(y_experience_level_train,SVCXpLevel_model.predict(x_experiênce_level_train)),classification_report(y_experience_level_test,SVCXpLevel_model.predict(x_experiênce_level_test)))"
       ],
       "metadata": {
-        "id": "Fd6sEi1C0ytg",
-        "outputId": "c19547fb-2af9-4b14-985a-448e6677fd89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fd6sEi1C0ytg",
+        "outputId": "c19547fb-2af9-4b14-985a-448e6677fd89"
       },
       "execution_count": 44,
       "outputs": [
@@ -4267,11 +4267,11 @@
         "print(\"Best Parameters:\", best_params)"
       ],
       "metadata": {
-        "id": "BjB5B_Ck07Be",
-        "outputId": "9ce754dd-cd7a-466e-c74b-5b781673f275",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BjB5B_Ck07Be",
+        "outputId": "9ce754dd-cd7a-466e-c74b-5b781673f275"
       },
       "execution_count": 45,
       "outputs": [
@@ -4293,11 +4293,11 @@
         "print('Test score: ',accuracy_score(y_experience_level_test,kNeighborsXpLevel_model.predict(x_experiênce_level_test)))"
       ],
       "metadata": {
-        "id": "5Yn0SnKu10Wu",
-        "outputId": "85ee12ea-b28b-48b2-cb17-ad305b1b569a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5Yn0SnKu10Wu",
+        "outputId": "85ee12ea-b28b-48b2-cb17-ad305b1b569a"
       },
       "execution_count": 46,
       "outputs": [
@@ -4317,11 +4317,11 @@
         "accuracy_score(y_experience_level_train,kNeighborsXpLevel_model.predict(x_experiênce_level_train)),accuracy_score(y_experience_level_test,kNeighborsXpLevel_model.predict(x_experiênce_level_test))"
       ],
       "metadata": {
-        "id": "kbqKLM5a2DYN",
-        "outputId": "b62d6ada-c49a-4e7a-b330-a13842089b4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kbqKLM5a2DYN",
+        "outputId": "b62d6ada-c49a-4e7a-b330-a13842089b4b"
       },
       "execution_count": 47,
       "outputs": [
@@ -4343,11 +4343,11 @@
         "confusion_matrix(y_experience_level_train,kNeighborsXpLevel_model.predict(x_experiênce_level_train)),confusion_matrix(y_experience_level_test,kNeighborsXpLevel_model.predict(x_experiênce_level_test))"
       ],
       "metadata": {
-        "id": "Umws-v2a2Nxj",
-        "outputId": "ea98d923-5b53-47a5-fd36-766fe8a1f836",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Umws-v2a2Nxj",
+        "outputId": "ea98d923-5b53-47a5-fd36-766fe8a1f836"
       },
       "execution_count": 49,
       "outputs": [
@@ -4374,11 +4374,11 @@
         "print(classification_report(y_experience_level_train,kNeighborsXpLevel_model.predict(x_experiênce_level_train)),classification_report(y_experience_level_test,kNeighborsXpLevel_model.predict(x_experiênce_level_test)))"
       ],
       "metadata": {
-        "id": "6My68rin2Qvq",
-        "outputId": "8cd38bbc-464e-4fbc-e57f-be3bd6e7dad6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6My68rin2Qvq",
+        "outputId": "8cd38bbc-464e-4fbc-e57f-be3bd6e7dad6"
       },
       "execution_count": 50,
       "outputs": [
@@ -4436,11 +4436,11 @@
         "print(\"Best Parameters:\", best_params)"
       ],
       "metadata": {
-        "id": "EJBk8Zi_2Xqt",
-        "outputId": "f7b70176-9017-46ee-84a9-d5518fd8dea3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EJBk8Zi_2Xqt",
+        "outputId": "f7b70176-9017-46ee-84a9-d5518fd8dea3"
       },
       "execution_count": 51,
       "outputs": [
@@ -4462,11 +4462,11 @@
         "print('Test score: ',accuracy_score(y_experience_level_test,neural_networkXpLevel_model.predict(x_experiênce_level_test)))"
       ],
       "metadata": {
-        "id": "P0qTQ2NZ3V_2",
-        "outputId": "d6c174b9-54f0-48d2-8cdb-87fd2218f4a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P0qTQ2NZ3V_2",
+        "outputId": "d6c174b9-54f0-48d2-8cdb-87fd2218f4a9"
       },
       "execution_count": 52,
       "outputs": [
@@ -4482,9 +4482,107 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "accuracy_score(y_experience_level_train,neural_networkXpLevel_model.predict(x_experiênce_level_train)),accuracy_score(y_experience_level_test,neural_networkXpLevel_model.predict(x_experiênce_level_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XVeMXiHDN3kR",
+        "outputId": "5f828249-6782-45ff-d591-4394409d7f1f"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.8933161953727506, 0.841025641025641)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "confusion_matrix(y_experience_level_train,neural_networkXpLevel_model.predict(x_experiênce_level_train)),confusion_matrix(y_experience_level_test,neural_networkXpLevel_model.predict(x_experiênce_level_test))"
+      ],
+      "metadata": {
+        "id": "ohoOKTGkOOtB",
+        "outputId": "765f2445-8afd-45a0-da24-01f07faf73bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[253,  45,   0],\n",
+              "        [ 38, 290,   0],\n",
+              "        [  0,   0, 152]]),\n",
+              " array([[61, 17,  0],\n",
+              "        [13, 64,  1],\n",
+              "        [ 0,  0, 39]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(y_experience_level_train,neural_networkXpLevel_model.predict(x_experiênce_level_train)),classification_report(y_experience_level_test,neural_networkXpLevel_model.predict(x_experiênce_level_test)))"
+      ],
+      "metadata": {
+        "id": "aRayJDpGOXdJ",
+        "outputId": "52a4e6b0-7956-4839-ad6b-f06d58fac1d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           1       0.87      0.85      0.86       298\n",
+            "           2       0.87      0.88      0.87       328\n",
+            "           3       1.00      1.00      1.00       152\n",
+            "\n",
+            "    accuracy                           0.89       778\n",
+            "   macro avg       0.91      0.91      0.91       778\n",
+            "weighted avg       0.89      0.89      0.89       778\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "           1       0.82      0.78      0.80        78\n",
+            "           2       0.79      0.82      0.81        78\n",
+            "           3       0.97      1.00      0.99        39\n",
+            "\n",
+            "    accuracy                           0.84       195\n",
+            "   macro avg       0.86      0.87      0.87       195\n",
+            "weighted avg       0.84      0.84      0.84       195\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "XVeMXiHDN3kR"
+        "id": "FYEIBbW0OeBF"
       },
       "execution_count": null,
       "outputs": []
